--- a/dashboard.html
+++ b/dashboard.html
@@ -22,16 +22,58 @@
                 <ul class="navbar-nav ms-auto">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign Up</a>
+                        <a class="nav-link" href="#">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="#">Log Out</a>
                     </li>
 
                 </ul>
             </div>
         </div>
     </nav>
+    <section class="m-5">
+        <div class="container-fluid" style="width: 60rem;">
+            <header class="fs-2">My Profile</header>
+            <div class="row">
+                <div class="col-4"><img src="img/man.png" alt="profile pic"></div>
+                <div class="col-8">
+                    <h4>Nitish G Panda</h6>
+                    <p>gobindanitish13@gmail.com</p>
+                    <p>9999999999</p>
+                    <p><a href="#">Edit profile</a></p>   
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="p-2" style="background-color: rgb(249, 225, 164);">
+        <div class="container" >
+            <div class="row p-2 m-2" style="background-color: rgb(255, 251, 242);width: 55rem;">
+                <div class="col-4"><img src="img/man.png" alt="profile pic"></div>
+                <div class="col-8">
+                    <h4>Nitish G Panda</h6>
+                    <p>gobindanitish13@gmail.com</p>
+                    <p>9999999999</p>
+                    <p><a href="#">Edit profile</a></p>   
+                </div>
+            </div>
+            <div class="row p-2 m-2" style="background-color: rgb(255, 251, 242);width: 55rem;">
+                <div class="col-4"><img src="img/man.png" alt="profile pic"></div>
+                <div class="col-8">
+                    <h4>Nitish G Panda</h6>
+                    <p>gobindanitish13@gmail.com</p>
+                    <p>9999999999</p>
+                    <p><a href="#">Edit profile</a></p>   
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="row p-3">
+            <div class="col">
+              <p>© 2024 Copyright PG Life.</p>
+            </div>
+    </footer>
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
