--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PGLife</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -81,7 +82,7 @@
             <div class="col">
               <p>© 2024 Copyright PG Life.</p>
             </div>
-    
+    </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
